# clawdroid

./: .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  doctor.sh  setup_everything.sh
.github/: CODEOWNERS
android-companion/: README.md  settings.gradle.kts
docs/: ARCHITECTURE.md  HEADLESS_SERVER.md  PUBLIC_RELEASE.md  llm.example.json
hermes-plugin/: README.md  __init__.py  client.py  plugin.yaml  schemas.py
openclaw-plugin/: README.md  index.js  openclaw.plugin.json  package.json  pnpm-lock.yaml
python-daemon/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python-daemon/openclaw_android_daemon/: __init__.py  action_verify.py  aptoide.py  bridge.py  config.py  controller.py  decision.py  llm_decider.py  main.py  models.py  ref_utils.py  routing.py  screen_context.py  server.py  service_catalog.py  snapshot.py  store.py  targets.py  utils.py  waydroid.py
python-daemon/tests/: __init__.py  test_action_verify.py  test_android_bridge_auth_static.py  test_bridge_client.py  test_daemon_api.py  test_decision_helpers.py  test_live_integration.py  test_llm_decider.py  test_response_shapes.py  test_runtime_routing.py  test_runtime_safety.py  test_service_catalog.py  test_store_helpers.py  test_target_ranking.py  test_waydroid_manager.py
scripts/: apply_device_profile.sh  bootstrap_android_sdk.sh  build_companion_apk.sh  common.sh  configure_openclaw.py  docker_smoke_setup.sh  doctor.sh  ensure_waydroid_ui.sh  google_play_certification.sh  import_graphical_env.sh  install_default_stores.sh  install_headless_display.sh  (+13 more)
(+26 files in other folders)
